# proxmox_rust

./: README.md  file2.txt  file3.txt
pve-network-rs/: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  README.md  Readme_gentoo.md  Readme_volume.md  libsyntax.rlib  test_syntax.rs
pve-network-rs/.github/workflows/: ci.yml  release.yml
pve-network-rs/crates/container-integration/: Cargo.toml
pve-network-rs/crates/container-integration/src/: error.rs  hooks.rs  hotplug.rs  lib.rs  pve_container_compat.rs  types.rs  vnet_binding.rs
pve-network-rs/crates/event-bus/: Cargo.toml
pve-network-rs/crates/event-bus/src/: lib.rs
pve-network-rs/crates/net-api/: Cargo.toml
pve-network-rs/crates/net-api/examples/: write_operations_demo.rs
pve-network-rs/crates/net-api/src/: container.rs  context.rs  lib.rs  migration.rs  network.rs  sdn.rs  storage.rs  tasks.rs  tests.rs
pve-network-rs/crates/net-apply/: Cargo.toml
pve-network-rs/crates/net-apply/src/: ifupdown.rs  lib.rs  rollback.rs  tests.rs  transaction.rs
pve-network-rs/crates/net-cli/: Cargo.toml  README.md
pve-network-rs/crates/net-cli/src/: lib.rs  main.rs  tests.rs
pve-network-rs/crates/net-cli/src/commands/: apply.rs  compat.rs  mod.rs  rollback.rs  status.rs  validate.rs
pve-network-rs/crates/net-config/: Cargo.toml
pve-network-rs/crates/net-config/src/: interfaces.rs  lib.rs  network_config.rs  pmxcfs.rs  sdn_config.rs
pve-network-rs/crates/net-config/src/tests/: mod.rs  pmxcfs_integration_tests.rs
pve-network-rs/crates/net-core/: Cargo.toml
pve-network-rs/crates/net-core/src/: bond.rs  bridge.rs  error.rs  interface.rs  lib.rs  types.rs  vlan.rs
pve-network-rs/crates/net-migration/: Cargo.toml  README.md
pve-network-rs/crates/net-migration/examples/: config_example.toml  migration_server.rs
pve-network-rs/crates/net-migration/src/: config.rs  fallback.rs  hooks.rs  lib.rs  middleware.rs  perl_client.rs
pve-network-rs/crates/net-test/: Cargo.toml
pve-network-rs/crates/net-test/src/: contract_tests.rs  integration.rs  lib.rs  mock_system.rs
pve-network-rs/crates/net-validate/: Cargo.toml  libsyntax.rlib
pve-network-rs/crates/net-validate/src/: ifupdown.rs  lib.rs  semantic.rs  syntax.rs
pve-network-rs/crates/pve-shared-types/: Cargo.toml
pve-network-rs/crates/pve-shared-types/src/: container.rs  error.rs  events.rs  ipam.rs  lib.rs  migration.rs  network.rs  sdn.rs  storage.rs
pve-network-rs/crates/sdn-core/: Cargo.toml
pve-network-rs/crates/sdn-core/src/: config.rs  controller.rs  ipam.rs  ipam_manager.rs  lib.rs  subnet.rs  tests.rs  vnet.rs  zone.rs
pve-network-rs/crates/sdn-drivers/: Cargo.toml
pve-network-rs/crates/sdn-drivers/src/: lib.rs  plugin_factory.rs  tests.rs
pve-network-rs/crates/sdn-drivers/src/controllers/: bgp.rs  evpn.rs  faucet.rs  mod.rs
pve-network-rs/crates/sdn-drivers/src/ipam/: factory.rs  mod.rs  netbox.rs  phpipam.rs  pve.rs  tests.rs
pve-network-rs/crates/sdn-drivers/src/zones/: evpn.rs  mod.rs  qinq.rs  simple.rs  vlan.rs  vxlan.rs
pve-network-rs/crates/storage-integration/: Cargo.toml
pve-network-rs/crates/storage-integration/src/: future_integration.rs  hooks.rs  lib.rs  path_resolution.rs  storage_network.rs  storage_plugins.rs  tests.rs  vlan_isolation.rs
pve-network-rs/debian/: changelog  control  pve-network-rs.install  pve-network-rs.postinst  pve-network-rs.prerm  pvenet.install  rules
pve-network-rs/docs/: command-history.md  command-log.md  event-bus-update.md  pvenet.1
pve-network-rs/docs/Task10/: task10_commands_summary.md  task10_files_modified.md
pve-network-rs/docs/Task11/: IMPLEMENTATION_SUMMARY.md  task11_commands_summary.md  task11_files_modified.md
pve-network-rs/docs/Task12/: IMPLEMENTATION_SUMMARY.md  README.md  files_created_modified.md  task12_commands_summary.md
pve-network-rs/docs/Task13/: task13_commands_summary.md  task13_files_summary.md
pve-network-rs/docs/Task2/: task2_commands_summary.md
pve-network-rs/docs/Task20/: CONTAINER_STORAGE_INTEGRATION.md  MIGRATION_RUNBOOK.md  TROUBLESHOOTING.md  task20_commands_summary.md  task20_files_summary.md
pve-network-rs/docs/Task21/: CANARY_DEPLOYMENT.md  MONITORING_PLAN.md  ROLLBACK_RUNBOOK.md  task21_commands_summary.md  task21_files_summary.md
pve-network-rs/docs/Task22/: SHARED_TYPES_OVERVIEW.md  task22_commands_summary.md  task22_files_summary.md
pve-network-rs/docs/Task23/: event_bus_integration.md
pve-network-rs/docs/Task24/: README.md  ztunnel-ideas.md
pve-network-rs/docs/Task3/: task3_commands_summary.md
pve-network-rs/docs/Task4/: task4_commands_summary.md
pve-network-rs/docs/Task5/: syntax_validation_completion.md  task5_commands_summary.md  task5_files_summary.md
pve-network-rs/docs/Task6/: task6_files_summary.md
pve-network-rs/docs/Task7/: IMPLEMENTATION_SUMMARY.md  task7_commands_summary.md  task7_files_summary.md
pve-network-rs/docs/Task8/: IMPLEMENTATION_SUMMARY.md  task8_commands_summary.md  task8_files_summary.md
pve-network-rs/docs/Task9/: IMPLEMENTATION_SUMMARY.md  task9_commands_summary.md  task9_files_summary.md
pve-network-rs/examples/: Cargo.toml  advanced_network_functions.rs  container_integration.rs  ipam_usage.rs  migration_example.rs  sdn_basic_usage.rs  storage_integration_example.rs  transactional_apply.rs
pve-network-rs/scripts/: build-cli.sh  pvenet-compat.sh
pve-network-rs/services/: pve-network-rs.service
