[package]
name = "pve-network-validate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxmox VE Network Validate - Configuration validation"

[dependencies]
# Workspace dependencies
# proxmox-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
regex.workspace = true
log.workspace = true

# Additional dependencies for validation
tempfile = "3.8"

# Local dependencies
pve-network-core = { path = "../net-core" }
pve-network-config = { path = "../net-config" }

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true