[package]
name = "pve-shared-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ipnet = { version = "2.9", features = ["serde"] }
mac_address = "1.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.1"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
