[package]
name = "pve-sdn-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxmox VE SDN Core - SDN core abstractions"

[dependencies]
# Workspace dependencies
# proxmox-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
ipnet.workspace = true
indexmap.workspace = true
log.workspace = true
chrono.workspace = true
reqwest.workspace = true
pve-shared-types = { path = "../pve-shared-types" }

# Local dependencies
pve-network-core = { path = "../net-core" }

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true
